<resources>
    <string name="app_name">MemoMate</string>
    <string name="appName">MemoMate</string>
    <string name="search_field_text">Search</string>
    <string name="new_memo_datetime_example">Monday, 06 May 2024 19:13 pm</string>
    <string name="memoTitleHint">Title</string>
    <string name="memoSubtitleHint">Subtitle</string>
    <string name="memo_content_hint">Memo Content...</string>
    <string name="delete_memo">Delete Memo</string>
    <string name="delete_question">Are you sure you want to delete this Memo?</string>
    <string name="delete_btn">DELETE</string>
    <string name="delete_cancel">CANCEL</string>
</resources>