<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.CreateNewMemo"
    android:background="@color/colorPrimary">

    <LinearLayout
        android:id="@+id/appTitleLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/_12sdp"
        android:layout_marginTop="@dimen/_12sdp"
        android:layout_marginStart="@dimen/_12sdp"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/appTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:fontFamily="@font/script_regular"
            android:textColor="@color/colorMain"
            android:textSize="@dimen/_20ssp"
            android:includeFontPadding="false" />

        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>

        <ImageView
            android:id="@+id/closeBtn"
            android:layout_width="@dimen/_15sdp"
            android:layout_height="@dimen/_15sdp"
            android:src="@drawable/ic_close"
            android:layout_gravity="center"
            android:background="@drawable/close_btn_background"
            app:tint="@color/colorLight" />

    </LinearLayout>

    <TextView
        android:id="@+id/newMemoDateTime"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/new_memo_datetime_example"
        android:textColor="@color/colorSecondary"
        android:textSize="@dimen/_10ssp"
        android:fontFamily="@font/ubuntu_regular"
        app:layout_constraintStart_toStartOf="@+id/appTitleLayout"
        app:layout_constraintEnd_toEndOf="@id/appTitleLayout"
        app:layout_constraintTop_toBottomOf="@id/appTitleLayout"/>

    <EditText
        android:id="@+id/memoTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_12sdp"
        android:background="@null"
        android:importantForAutofill="no"
        android:includeFontPadding="false"
        android:textSize="@dimen/_20ssp"
        android:fontFamily="@font/ubuntu_medium"
        android:textColor="@color/colorSecondary"
        android:textColorHighlight="@color/colorLight"
        android:hint="@string/memoTitleHint"
        android:textColorHint="@color/colorSecondary"
        app:layout_constraintStart_toStartOf="@id/newMemoDateTime"
        app:layout_constraintEnd_toEndOf="@id/newMemoDateTime"
        app:layout_constraintTop_toBottomOf="@id/newMemoDateTime"/>

    <EditText
        android:id="@+id/memoSubTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:importantForAutofill="no"
        android:includeFontPadding="false"
        android:layout_marginTop="@dimen/_12sdp"
        android:textSize="@dimen/_16ssp"
        android:hint="@string/memoSubtitleHint"
        android:fontFamily="@font/ubuntu_medium"
        android:textColorHighlight="@color/colorLight"
        android:textColor="@color/colorSecondary"
        android:textColorHint="@color/colorSecondary"
        app:layout_constraintStart_toStartOf="@id/memoTitle"
        app:layout_constraintEnd_toEndOf="@id/memoTitle"
        app:layout_constraintTop_toBottomOf="@id/memoTitle"
        android:background="@null" />

    <EditText
        android:id="@+id/memoContent"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_12sdp"
        android:background="@null"
        android:textSize="@dimen/_14ssp"
        android:importantForAutofill="no"
        android:includeFontPadding="false"
        android:inputType="textMultiLine"
        android:minHeight="@dimen/_100sdp"
        android:gravity="top"
        android:fontFamily="@font/ubuntu_regular"
        android:textColor="@color/colorSecondary"
        android:textColorHighlight="@color/colorLight"
        android:textColorHint="@color/colorSecondary"
        android:hint="@string/memo_content_hint"
        app:layout_constraintStart_toStartOf="@+id/memoSubTitle"
        app:layout_constraintEnd_toEndOf="@+id/memoSubTitle"
        app:layout_constraintTop_toBottomOf="@+id/memoSubTitle"/>
    
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_12sdp"
        android:layout_marginEnd="@dimen/_12sdp"
        android:layout_marginBottom="@dimen/_12sdp"
        app:layout_constraintBottom_toBottomOf="parent">

        <ImageView
            android:id="@+id/deleteButton"
            android:src="@drawable/ic_delete"
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp"
            android:layout_alignParentStart="true"
            app:tint="@color/colorMain" />

        <ImageView
            android:id="@+id/saveButton"
            android:src="@drawable/ic_right"
            android:background="@drawable/close_btn_background"
            android:layout_width="@dimen/_30sdp"
            android:padding="@dimen/_5sdp"
            android:layout_height="@dimen/_30sdp"
            android:layout_alignParentEnd="true"
            app:tint="@color/colorLight" />

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>